# Sensors-Control

./: Robot_Control.m  Terminal_Commands.m  ost.txt  ost.yaml
Robot movement in Matlab code/: Robot_Movement.m
SandC/: CMakeLists.txt
SandC/scripts/: visual_controller.py
SandC/src/: gopro_publisher.cpp  test.cpp
final_project/: CMakeLists.txt  package.xml
final_project/scripts/: control_command.py
final_project/src/: gopro_publisher.cpp
visual servoing and feature matching/: Cam_Servoing.m  VisualServoing.m
